ui-ux: Fix top section 'main' spacing

--- a/css/components/_about.scss
+++ b/css/components/_about.scss
@@ -34,7 +34,7 @@
                 
                 p {
                     margin: 10px 0;
-                    font-size: 1.3rem;
+                    font-size: 1.5rem;
                     line-height: 2rem;
 
                     a {
