--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -40,7 +40,7 @@ header {
 			width: 100%;
 			position: fixed;
 			background: #fefefe;
-			top: 85px;
+			top: 84px;
 			left: -100%;
 			transition: all 300ms ease;
 
