--- a/css/helpers/_utilities.scss
+++ b/css/helpers/_utilities.scss
@@ -2,6 +2,10 @@ body {
     padding-top: 58px;
 }
 
+main {
+    padding-top: 26px;
+}
+
 .container {
 	position: relative;
 	margin: 0 auto;
